Refactor DriverService to manage AppUser and vehicle assignments 1259